# checker_backend

./: .crossShell.nix.swp  .gitignore  .swp  Cargo.nix  Cargo.toml  README.md  Rocket.toml  checker_frontend.yml  cross.sh  flake.nix  sqlite.db  test.db
migrations/1_workshops/: up.sql
migrations/2_members/: up.sql
migrations/3_taken/: up.sql
migrations/4_add_music_column/: up.sql
src/: main.rs  schema.rs
